[fix] gap

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ main.container {
   flex-direction: column;
   align-items: center;
   padding: 20px 0;
-  gap: 2.5rem
+  gap: 20px;
 }
 
 /* Form */
